--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 body {
   /* //TODO:choose a font theme */
+  padding: 20px 80px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.login-user-icon {
+  font-size: 35px;
+  color: grey;
+  margin-left: 5px;
 }
