--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,28 @@
 body {
   /* //TODO:choose a font theme */
+  font-family: 'Roboto', sans-serif;
   padding: 20px 80px;
+}
+h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 24;
+  font-weight: bold;
+}
+h3 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16;
+  font-weight: normal;
+}
+h3 {
+  font-family: 'Lato', sans-serif;
+  font-size: 14;
+  font-weight: 700;
+}
+p,
+span {
+  font-family: 'Lato', sans-serif;
+  font-size: 12;
+  font-weight: normal;
 }
 
 a {
@@ -12,4 +34,22 @@ a {
   font-size: 35px;
   color: grey;
   margin-left: 5px;
+}
+
+.hero img {
+  width: 100%;
+}
+.hero p {
+  font-size: 60px;
+}
+.hero-image-text {
+  position: absolute;
+  color: white;
+  right: 106px;
+  bottom: 119px;
+}
+
+.yama-text {
+  font-family: 'Roboto';
+  font-weight: bold;
 }
