--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -4,11 +4,19 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
-
+  background: linear-gradient(
+    183.56deg,
+    #644e5b 35.03%,
+    rgba(100, 78, 91, 0) 168.13%
+  );
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: white;
+  a {
+    color: white;
+  }
   .logo-container {
-    height: 100%;
-    width: 70px;
-    padding: 25px;
+    align-self: center;
+    margin-left: 40px;
   }
   .login-group {
     display: flex;
@@ -23,8 +31,14 @@
     justify-content: flex-end;
 
     .option {
+      font-family: 'Lato', sans-serif;
+      font-weight: bold;
       padding: 10px 15px;
       cursor: pointer;
+    }
+    .option-span {
+      font-family: 'Lato', sans-serif;
+      font-weight: bold;
     }
   }
 }
